# SDL2-TiledMap-TinyXML

./: .gitignore  CMakeLists.txt
headers/: Entity.hpp  Game.hpp  Renderer.hpp  TMXLoader.hpp  TileLayer.hpp
res/map/: NES - Super Mario Bros - World -1 FDS.tsx  fire4_64_0.tsx
res/tilesets/: untitled.tiled-session
sources/: Entity.cpp  Game.cpp  Renderer.cpp  TMXLoader.cpp  TileLayer.cpp  main.cpp
